Se puede crear alumnos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
     dataBinding {
         enabled = true
     }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
