--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.TpIntegrador"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.TpIntegrador.NoActionBar" />
+        <activity
             android:name=".Login.Login"
             android:exported="true"
             android:label="@string/title_activity_page_course"
@@ -25,12 +30,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".HiTeacher"
-            android:exported="false" />
-        <activity
-            android:name=".ui.alumnos.HomeViewModel"
-            android:exported="false" />
         <activity
             android:name=".Login.RememberPassword"
             android:exported="false" />
